# companion

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.ollama.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  license-notice.txt  release.yml  verify_labels.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builds.yml  demo.yml  docs.yml  pr-labels.yml  pull_requests.yml  push.yml  scripts.yml  style.yml  tests.yml
apm/: prometheus.yml
apm/grafana/dashboards/: dashboard.json
auth/: docker-compose.yml
dashboard/: Dockerfile  app.py  pyproject.toml
demo/: Dockerfile  main.py
demo/styles/: custom.css
docker/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/apm/: prometheus.yml
docs/: README.md  dbdiagram.txt  mint.json
docs/api-reference/code/: chat.mdx
docs/api-reference/guidelines/: create-guideline.mdx  delete-guideline.mdx  fetch-guidelines.mdx  get-guideline.mdx  update-guideline.mdx
docs/api-reference/login/: request-token-from-creds.mdx  request-token-from-github.mdx  validate-token.mdx
docs/api-reference/repos/: delete-repo.mdx  fetch-repos.mdx  get-repo.mdx  register-repo.mdx
docs/community/: changelog.mdx  contributing.mdx  faq.mdx  roadmap.mdx  support.mdx
docs/developers/: gpu-selection.mdx  self-hosting.mdx
docs/getting-started/: quickstart.mdx
docs/home/: introduction.mdx  quack.mdx
scripts/: evaluate_ollama_latency.py  latency.csv  test_e2e.py
scripts/ollama/: Dockerfile  README.md  benchmark_result.csv  docker-compose.yml  evaluate_latency.py  evaluate_perf.py  latency.csv
src/: .coveragerc  Dockerfile  alembic.ini
src/alembic/: README.md  env.py  script.py.mako
src/alembic/versions/: 2023-11-07-15-35_eb1a6567456c.py  2024-02-23-11-56_4c08af871a9e.py  2024-02-27-10-09_d7067d13464c.py
src/app/: db.py  main.py  models.py
src/app/api/: dependencies.py
src/app/api/api_v1/: router.py
src/app/api/api_v1/endpoints/: code.py  compute.py  guidelines.py  login.py  repos.py  users.py
src/app/core/: analytics.py  config.py  security.py
src/app/crud/: __init__.py  base.py  crud_guideline.py  crud_repo.py  crud_user.py
src/app/schemas/: base.py  code.py  compute.py  guidelines.py  login.py  repos.py  services.py  users.py
src/app/services/: github.py  ollama.py  openai.py  slack.py  telemetry.py  utils.py
src/app/services/auth/: supabase.py
src/app/services/llm/: claude.py  gemini.py  groq.py  llm.py  mistral.py  ollama.py  openai.py  tempCodeRunnerFile.py  utils.py
src/app/services/notifications/: slack.py
src/migrations/: README  env.py
src/migrations/versions/: 2024_03_30_0143-66a64868bce4_.py
src/tests/: conftest.py  test_dependencies.py  test_security.py  test_services.py
src/tests/endpoints/: test_code.py  test_compute.py  test_guidelines.py  test_login.py  test_repos.py  test_users.py
src/tests/services/: test_llm.py
traefik/: traefik.yml
