[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "contribution-api"
version = "0.1.0.dev0"
description = "Backend for contribution guideline curation"
license = "Apache-2.0"
authors = ["François-Guillaume Fernandez <support@quackai.com>"]
maintainers = ["François-Guillaume Fernandez <support@quackai.com>"]
readme = "README.md"
repository = "https://github.com/quack-ai/contribution-api"
keywords = ["backend", "api", "code contribution", "guidelines"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = ">=0.11.1,<1.0.0"
fastapi = ">=0.100.0,<1.0.0"
sqlmodel = "^0.0.8"
asyncpg = ">=0.25.0,<1.0.0"
bcrypt = "^3.2.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = "^3.2.0"
requests = "^2.20.0"
python-multipart = "==0.0.5"
SQLAlchemy-Utils = "^0.38.3"
sentry-sdk = { version = "^1.14.0", extras = ["fastapi"] }
alembic = "^1.8.1"
posthog = "^3.0.0"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
ruff = "==0.2.2"
mypy = "==1.8.0"
types-requests = ">=2.0.0"
types-python-jose = ">=3.3.0"
types-passlib = ">=1.7.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.2,<9.0.0"
pytest-asyncio = ">=0.17.0,<1.0.0"
httpx = ">=0.23.0"
pytest-cov = "^4.0.0"
pytest-pretty = "^1.0.0"

[tool.coverage.run]
source = ["src/app"]

[tool.ruff]
line-length = 120
target-version = "py39"
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    # "D101", "D103",  # pydocstyle missing docstring in public function/class
    "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "CPY",  # flake8-copyright
    "ISC",  # flake8-implicit-str-concat
    "PYI",  # flake8-pyi
    "NPY",  # numpy
    "PERF",  # perflint
    "RUF",  # ruff specific
    "PTH",  # flake8-use-pathlib
    "S",  # flake8-bandit
    "N",  # pep8-naming
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
    "LOG",  # flake8-logging
    "SIM",  # flake8-simplify
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "ARG",  # flake8-unused-arguments
    "FURB",  # refurb
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
    "ANN101",  # missing type annotations on self
    "ANN102",  # missing type annotations on cls
    "ANN002",  # missing type annotations on *args
    "ANN003",  # missing type annotations on **kwargs
    "COM812",  # trailing comma missing
    "ISC001",  # implicit string concatenation (handled by format)
]
exclude = [".git"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
known-third-party = ["fastapi"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"scripts/**.py" = ["D", "T201", "S101", "ANN"]
".github/**.py" = ["D", "T201", "ANN"]
"client/docs/**.py" = ["E402"]
"src/tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN001", "ANN201", "ARG001"]
"src/alembic/versions/**.py" = ["CPY001"]
"src/alembic/**.py" = ["ANN"]
"client/tests/**.py" = ["D103", "CPY001", "S101"]
"src/app/main.py" = ["ANN"]
"src/app/schemas/**.py" = ["A"]
"src/app/models.py" = ["A"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
mypy_path = "src/"
files = "src/app"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["posthog"]
ignore_missing_imports = true
