[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "contribution-dashboard"
version = "0.1.0.dev0"
description = "Management dashboard for guideline edition"
license = "AGPL-3.0-or-later"
authors = ["François-Guillaume Fernandez <support@quack-ai.com>"]
maintainers = ["François-Guillaume Fernandez <support@quack-ai.com>"]
readme = "README.md"
repository = "https://github.com/quack-ai/contribution-api"
keywords = ["frontend", "gradio", "code contribution", "guidelines"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.20.0"
requests = "^2.31.0"
